[project]
name = "scale_redis"
version = "0.1.0"
description = "The scale library for working with the Redis database"
authors = [
    {name = "Johan Cobo", email = "johancobo236@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
